<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app1="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@mipmap/dialog_bg" android:layout_width="500.0dip" android:layout_height="420.0dip" android:scaleX="0.8" android:scaleY="0.8">
        <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
            <ImageView android:id="@id/dialog_icon" android:layout_width="75.0dip" android:layout_height="75.0dip" android:src="@mipmap/dialog_icon" android:layout_centerInParent="true" />
            <com.dinuscxj.progressbar.CircleProgressBar android:id="@id/dialog_progress" android:visibility="gone" android:layout_width="90.0dip" android:layout_height="90.0dip" android:max="100" android:layout_centerHorizontal="true" app1:progress_background_color="#ff717171" app1:progress_end_color="#991094a9" app1:progress_start_color="#9985ea92" app1:progress_stroke_width="3.0dip" app1:progress_text_color="@color/dialog_title" app1:progress_text_size="14.0dip" app1:style="solid_line" />
        </RelativeLayout>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/dialog_title" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/title" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/update_info" />
        <LinearLayout android:gravity="center_horizontal" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginLeft="42.0dip" android:layout_marginTop="22.5dip" android:layout_marginRight="42.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@color/dialog_message" android:gravity="left|top" android:id="@id/message" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="" android:singleLine="false" android:lineSpacingMultiplier="1.5" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="42.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="42.0dip">
            <Button android:textSize="15.0sp" android:textColor="@color/dialog_button" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/positiveButton" android:background="@drawable/dialog_btn_bg2" android:layout_width="127.0dip" android:layout_height="39.0dip" android:text="@string/update_later" />
            <Button android:textSize="15.0sp" android:textColor="@color/dialog_button" android:id="@id/cancelButton" android:background="@drawable/dialog_btn_bg2" android:layout_width="127.0dip" android:layout_height="39.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/update_skip" />
            <Button android:textSize="15.0sp" android:textColor="@color/dialog_button" android:gravity="center" android:layout_gravity="center" android:id="@id/negativeButton" android:background="@drawable/dialog_btn_bg2" android:layout_width="127.0dip" android:layout_height="39.0dip" android:text="@string/update_now" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
