<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textSize="16.0sp" android:textColor="@color/user_center_quit_color" android:gravity="center" android:id="@id/logout" android:background="@drawable/loginout_select" android:paddingLeft="35.0dip" android:visibility="gone" android:layout_width="162.0dip" android:layout_height="38.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="40.0dip" android:text="@string/logout" android:layout_marginEnd="50.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/card_provider" android:background="@drawable/usercenter_item_bg" android:layout_width="180.0dip" android:layout_height="290.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/card_userinfo" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/card_provider_bottom_bg" android:background="@drawable/usercenter_item_down" android:layout_width="0.0dip" android:layout_height="100.0dip" app:layout_constraintBottom_toBottomOf="@id/card_provider" app:layout_constraintEnd_toEndOf="@id/card_provider" app:layout_constraintStart_toStartOf="@id/card_provider" />
    <ImageView android:id="@id/provider_icon_up" android:layout_width="144.0dip" android:layout_height="144.0dip" android:src="@mipmap/provider_icon_up" android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="@id/card_provider" app:layout_constraintStart_toStartOf="@id/card_provider" app:layout_constraintTop_toTopOf="@id/card_provider" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/user_center_txt_color" android:id="@id/provider_title" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_marginTop="125.0dip" android:text="@string/provider_title" app:layout_constraintEnd_toEndOf="@id/card_provider" app:layout_constraintStart_toStartOf="@id/card_provider" app:layout_constraintTop_toTopOf="@id/card_provider" />
    <ImageView android:id="@id/provider_icon_down" android:visibility="gone" android:layout_width="29.5dip" android:layout_height="33.0dip" android:layout_marginTop="13.0dip" android:src="@mipmap/provider_icon_down" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_provider_bottom_bg" app:layout_constraintTop_toTopOf="@id/card_provider_bottom_bg" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/service_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_provider_bottom_bg" app:layout_constraintTop_toBottomOf="@id/provider_icon_down" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/reseller" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_provider_bottom_bg" app:layout_constraintTop_toBottomOf="@id/service_name" />
    <View android:id="@id/card_userinfo" android:background="@drawable/usercenter_item_bg" android:layout_width="180.0dip" android:layout_height="290.0dip" android:layout_marginStart="20.0dip" app:layout_constraintBottom_toBottomOf="@id/card_provider" app:layout_constraintEnd_toStartOf="@id/servie_period_panel" app:layout_constraintStart_toEndOf="@id/card_provider" app:layout_constraintTop_toTopOf="@id/card_provider" />
    <View android:id="@id/card_userinfo_bottom_bg" android:background="@drawable/usercenter_item_down" android:layout_width="0.0dip" android:layout_height="100.0dip" app:layout_constraintBottom_toBottomOf="@id/card_userinfo" app:layout_constraintEnd_toEndOf="@id/card_userinfo" app:layout_constraintStart_toStartOf="@id/card_userinfo" />
    <ImageView android:id="@id/userid_icon_up" android:layout_width="144.0dip" android:layout_height="144.0dip" android:src="@mipmap/userid_icon_up" app:layout_constraintEnd_toEndOf="@id/card_userinfo" app:layout_constraintStart_toStartOf="@id/card_userinfo" app:layout_constraintTop_toTopOf="@id/card_userinfo" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/user_center_txt_color" android:id="@id/user_info_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="125.0dip" android:text="@string/user_info" app:layout_constraintEnd_toEndOf="@id/card_userinfo" app:layout_constraintStart_toStartOf="@id/card_userinfo" app:layout_constraintTop_toTopOf="@id/card_userinfo" />
    <ImageView android:id="@id/userid_icon_down" android:visibility="gone" android:layout_width="29.5dip" android:layout_height="33.0dip" android:layout_marginTop="13.0dip" android:src="@mipmap/userid_icon_down" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_userinfo_bottom_bg" app:layout_constraintTop_toTopOf="@id/card_userinfo_bottom_bg" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:lines="1" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_userinfo_bottom_bg" app:layout_constraintTop_toBottomOf="@id/userid_icon_down" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/user_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_userinfo_bottom_bg" app:layout_constraintTop_toBottomOf="@id/username" />
    <View android:id="@id/servie_period_panel" android:background="@drawable/usercenter_item_bg" android:layout_width="180.0dip" android:layout_height="290.0dip" android:layout_marginStart="20.0dip" app:layout_constraintBottom_toBottomOf="@id/card_provider" app:layout_constraintEnd_toStartOf="@id/card_contact" app:layout_constraintStart_toEndOf="@id/card_userinfo" app:layout_constraintTop_toTopOf="@id/card_provider" />
    <View android:id="@id/card_service_bottom_bg" android:background="@drawable/usercenter_item_down" android:layout_width="0.0dip" android:layout_height="100.0dip" app:layout_constraintBottom_toBottomOf="@id/servie_period_panel" app:layout_constraintEnd_toEndOf="@id/servie_period_panel" app:layout_constraintStart_toStartOf="@id/servie_period_panel" />
    <ImageView android:id="@id/service_period_icon_up" android:layout_width="144.0dip" android:layout_height="144.0dip" android:src="@mipmap/service_period_icon_up" app:layout_constraintEnd_toEndOf="@id/servie_period_panel" app:layout_constraintStart_toStartOf="@id/servie_period_panel" app:layout_constraintTop_toTopOf="@id/servie_period_panel" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/user_center_txt_color" android:id="@id/service_period_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="125.0dip" android:text="@string/service_period" app:layout_constraintEnd_toEndOf="@id/servie_period_panel" app:layout_constraintStart_toStartOf="@id/servie_period_panel" app:layout_constraintTop_toTopOf="@id/servie_period_panel" />
    <ImageView android:id="@id/service_period_icon_down" android:visibility="gone" android:layout_width="29.5dip" android:layout_height="33.0dip" android:layout_marginTop="13.0dip" android:src="@mipmap/service_period_icon_down" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_service_bottom_bg" app:layout_constraintTop_toTopOf="@id/card_service_bottom_bg" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/expire_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_service_bottom_bg" app:layout_constraintTop_toBottomOf="@id/service_period_icon_down" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/expire_notice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_service_bottom_bg" app:layout_constraintTop_toBottomOf="@id/expire_time" />
    <View android:id="@id/card_contact" android:background="@drawable/usercenter_item_bg" android:layout_width="180.0dip" android:layout_height="290.0dip" android:layout_marginStart="20.0dip" app:layout_constraintBottom_toBottomOf="@id/card_provider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/servie_period_panel" app:layout_constraintTop_toTopOf="@id/card_provider" />
    <View android:id="@id/card_contact_bottom_bg" android:background="@drawable/usercenter_item_down" android:layout_width="0.0dip" android:layout_height="100.0dip" app:layout_constraintBottom_toBottomOf="@id/card_contact" app:layout_constraintEnd_toEndOf="@id/card_contact" app:layout_constraintStart_toStartOf="@id/card_contact" />
    <ImageView android:id="@id/contact_icon_up" android:layout_width="144.0dip" android:layout_height="144.0dip" android:src="@mipmap/contact_icon_up" app:layout_constraintEnd_toEndOf="@id/card_contact" app:layout_constraintStart_toStartOf="@id/card_contact" app:layout_constraintTop_toTopOf="@id/card_contact" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/user_center_txt_color" android:id="@id/contact_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="125.0dip" android:text="@string/contact_method" app:layout_constraintEnd_toEndOf="@id/card_contact" app:layout_constraintStart_toStartOf="@id/card_contact" app:layout_constraintTop_toTopOf="@id/card_contact" />
    <ImageView android:id="@id/contact_icon_down" android:visibility="gone" android:layout_width="29.5dip" android:layout_height="33.0dip" android:layout_marginTop="13.0dip" android:src="@mipmap/contact_icon_down" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_contact_bottom_bg" app:layout_constraintTop_toTopOf="@id/card_contact_bottom_bg" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_contact_bottom_bg" app:layout_constraintTop_toBottomOf="@id/contact_icon_down" />
    <TextView android:textSize="14.0sp" android:textColor="@color/user_center_txt_color" android:id="@id/website" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginStart="27.0dip" app:layout_constraintStart_toStartOf="@id/card_contact_bottom_bg" app:layout_constraintTop_toBottomOf="@id/phone" />
</androidx.constraintlayout.widget.ConstraintLayout>
